fixes horizontal draggability on small screens.

--- a/src/style/site.css
+++ b/src/style/site.css
@@ -1620,10 +1620,6 @@ hr.ac-table-header {
       box-shadow: 1px 2px 0px 0px #ecf0f1;
 }
 
-.table-ac-bordered tfoot tr td {
-  padding: 0px;
-}
-
 .skill-modifier-input input {
   font-size: 15px;
   padding: 10px 0 10px 10px;
